deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chaos-engineering-guide-workshop
  name: chaos-engineering-guide-workshop-deployment
  namespace: chaos-engineering-guide-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chaos-engineering-guide-workshop-app
  template:
    metadata:
      labels:
        app: chaos-engineering-guide-workshop-app
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/redhat-ocp-demo/simple-webapp-php:latest
        imagePullPolicy: Always
        name: chaos-engineering-guide-workshop-app
        resources: {}
