deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-engineering-guide-workshop-service
  namespace: chaos-engineering-guide-workshop
spec:
  selector:
    app: chaos-engineering-guide-workshop-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
